--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.21",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
+    "sass": "^1.93.0",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.2"
   }
